# bracket2-rs

./: Cargo.toml
.cargo/: config
resources/: notes  simple-countdown.bt
src/: main.rs  program.rs  result.rs
